# 2dGame

./: .gitignore  Button.cpp  Button.h  CMakeLists.txt  Camera.cpp  Camera.h  GameEntity.h  GameLevel.h  GameState.cpp  GameState.h  Platform.cpp  Platform.h  Player.cpp  Player.h  README.md  TextEntity.cpp  TextEntity.h  gameObject.h  guiEntity.h  main.cpp
